# KCNA-CLI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  wrong_answer.md
.github/workflows/: ci.yml
LICENSES/: moabukar-NOTICE.txt
src/kcna/: __main__.py  cli.py  config.py  loader.py  models.py  persistence.py  sampling.py  scoring.py  validation.py
src/kcna/data/questions/cloud-native-architecture/: autoscaling.json  cncf-landscape-governance.json  observability-metrics-logs-traces.json  open-standards.json  serverless-knative.json
src/kcna/data/questions/cloud-native-delivery/: cicd-helm-kustomize.json  gitops-argocd-flux.json  release-strategies.json
src/kcna/data/questions/container-orchestration/: networking-cni-gatewayapi.json  runtime-cri-oci.json  security-rbac.json  service-mesh.json  storage-csi.json
src/kcna/data/questions/kubernetes-fundamentals/: api-objects.json  control-plane.json  networking-services.json  scheduling.json  storage-configuration.json  workloads.json
src/kcna/tui/: app.py  kcna.tcss
src/kcna/tui/screens/: exam.py  practice.py  results.py  review.py  title.py
src/kcna/tui/widgets/: question_card.py  timer_bar.py
tests/: conftest.py  test_loader.py  test_persistence.py  test_sampling.py  test_scoring.py  test_tui_smoke.py  test_validation.py
